rsky/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/instance: rsky
    app.kubernetes.io/name: rsky
  name: rsky
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: rsky
      app.kubernetes.io/name: rsky
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: rsky
        app.kubernetes.io/name: rsky
    spec:
      containers:
        - image: registry.devops.rivtower.com/web5/rsky:v0.1.1
          imagePullPolicy: IfNotPresent
          name: pds
          command:
            - /bin/sh
            - -c
            - ./rsky
          ports:
            - containerPort: ${PDS_PORT}
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext: {}
          volumeMounts:
            - mountPath: /pds
              name: pds
        - image: m.daocloud.io/docker.io/postgres:17-bookworm
          imagePullPolicy: IfNotPresent
          name: database
          ports:
            - containerPort: 5432
              name: postgres
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: database
        - image: m.daocloud.io/docker.io/localstack/localstack:latest
          imagePullPolicy: IfNotPresent
          name: database
          ports:
            - containerPort: 4566
              name: localstack
              protocol: TCP
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext: {}
          volumeMounts:
            - mountPath: /var/lib/localstack/data
              name: database
  volumeClaimTemplates:
    - metadata:
        name: pds
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: nfs-client
        resources:
          requests:
            storage: 10Gi
    - metadata:
        name: database
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: nfs-client
        resources:
          requests:
            storage: 100Gi
            
            
            
# export PGPASSWORD='password' && psql -U pg -h 127.0.0.1 -p 5433 -d postgres -f rsky/migrations/2023-11-15-004814_pds_init/up.sql
# export PGPASSWORD='password' && psql -U pg -h 127.0.0.1 -p 5433 -d postgres -f rsky/migrations/2024-03-20-042639_account_deactivation/up.sql
