rsky/svc_node_port.yaml
apiVersion: v1
kind: Service
metadata:
  name: rsky-node-port
  labels:
    app.kubernetes.io/instance: rsky
    app.kubernetes.io/name: rsky
spec:
  type: NodePort
  ports:
    - name: http
      port: ${PDS_PORT}
      protocol: TCP
      targetPort: ${PDS_PORT}
      nodePort: ${PDS_PORT}
  selector:
    app.kubernetes.io/instance: rsky
    app.kubernetes.io/name: rsky
