rsky/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rsky-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: web5.bbs.fans
      http:
        paths:
          - backend:
              service:
                name: rsky
                port:
                  number: 32583
            path: /
            pathType: ImplementationSpecific
    - host: "*.web5.bbs.fans"
      http:
        paths:
          - backend:
              service:
                name: rsky
                port:
                  number: 32583
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
      - web5.bbs.fans
      secretName: web5
    - hosts:
      - "*.web5.bbs.fans"
      secretName: web5
